added a proxy to the pakage json

--- a/client/src/pages/Signup/Signup.css
+++ b/client/src/pages/Signup/Signup.css
@@ -5,3 +5,16 @@
     width: 100vw;
     height: 80vh;
   }
+  button {
+    width: 100%;
+    background-color: #34495E; 
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+   button:hover {
+    background-color: #45a049; /* Green */
+  }
