adding styled containertp the signin and signup pages

--- a/client/src/pages/Signin/Signin.css
+++ b/client/src/pages/Signin/Signin.css
@@ -1,9 +1,9 @@
-.zhioua-mohamed{
+.zhioua{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100vw;
-    height: 80vh;
+    height: 90vh;
     
   }
   button {
