adding font awesome icons to the CustomInput

--- a/client/src/components/CustomInput/CustomInput.css
+++ b/client/src/components/CustomInput/CustomInput.css
@@ -1,4 +1,4 @@
-input , select {
+/* input , select {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -6,4 +6,4 @@ input , select {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
-  }
+  } */
