added a Navbar component and add it to the App.js

--- a/client/src/pages/Signin/Signin.css
+++ b/client/src/pages/Signin/Signin.css
@@ -16,6 +16,6 @@
     border-radius: 4px;
     cursor: pointer;
   }
-   button:hover {
-    background-color: #45a049; /* Green */
-  }
+   /* button:hover {
+    background-color: #45a049;  
+  } */
