--- a/client/src/pages/Signup/Signup.css
+++ b/client/src/pages/Signup/Signup.css
@@ -15,6 +15,6 @@
     border-radius: 4px;
     cursor: pointer;
   }
-   button:hover {
-    background-color: #45a049; /* Green */
-  }
+   /* button:hover {
+    background-color: #45a049; 
+  } */
