--- a/client/src/components/GoogleAuth/GoogleAuth.css
+++ b/client/src/components/GoogleAuth/GoogleAuth.css
@@ -1,13 +1,12 @@
-
-.social-icon-google{
-    color:white ;
-    background-color: #DB4437;
-    height :60px;
-    width: 60px;
-    border-radius: 50%;
-    border: none;
+.social-icon-google {
+  color: white;
+  background-color: #db4437;
+  height: 60px;
+  width: 60px;
+  border-radius: 50%;
+  border: none;
 }
-.social-icon-google :hover {
-    background:#DB4437 ;
-    opacity: 0.6; 
-  }
+.social-icon-google:hover {
+  background: #db4437;
+  opacity: 1;
+}
