--- a/client/src/pages/Signup/Signup.css
+++ b/client/src/pages/Signup/Signup.css
@@ -1,13 +1,13 @@
-.zhioua-mohamed{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    height: 90vh;
-  }
-  button {
+.container{
+  min-height: 100%;   
+  min-height: 90vh;
+  display: flex;
+  align-items: center;
+}
+
+  .submit {
     width: 100%;
-    background-color: #34495E; 
+    background-color:#04AA6D; 
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -15,6 +15,6 @@
     border-radius: 4px;
     cursor: pointer;
   }
-   /* button:hover {
+  .submit:hover {
     background-color: #45a049; 
-  } */
+  }
