adding more style to the signin and signup

--- a/client/src/pages/Signin/Signin.css
+++ b/client/src/pages/Signin/Signin.css
@@ -19,3 +19,18 @@
     .submit:hover {
     background-color: #45a049;  
   } 
+  .line {
+    height: 1px;
+    width: 45%;
+    background-color: #E0E0E0;
+    margin-top: 10px;
+}
+
+.or {
+    width: 10%;
+    font-weight: bold;
+}
+
+.text-sm {
+    font-size: 14px !important;
+}
