--- a/client/src/pages/Signup/Signup.css
+++ b/client/src/pages/Signup/Signup.css
@@ -7,7 +7,7 @@
 
   .submit {
     width: 100%;
-    background-color:#04AA6D; 
+    background-color:#34495E; 
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
