--- a/client/src/pages/Profile/Profile.css
+++ b/client/src/pages/Profile/Profile.css
@@ -1,113 +1,78 @@
-body{
-	background-color: #eee;
-}
-.card{
-	background-color: #fff;
-	width: 800px;
-	border-radius: 33px;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	padding: 2rem !important;
-  
-   }
-.top-container{
-	display: flex;
-	align-items: center;
- 
-}
-.profile-image{
-	border-radius: 10px;
-	border: 2px solid #5957f9;
-}
-.name{
-	font-size: 15px;
-	font-weight: bold;
-	color: #272727;
-	position: relative;
-	top: 8px;
-}
-.mail{
-	font-size: 14px;
-	color: grey;
-	position: relative;
-	top: 2px;
-}
-.middle-container{
-	background-color: #eee;
-	border-radius: 12px;
-
-}
-.middle-container:hover {
-	border: 1px solid #5957f9;
-}
-.dollar-div{
-	background-color: #5957f9;
-	padding: 12px;
-	border-radius: 10px;
-}
-.round-div{
-	border-radius: 50%;
-	width: 35px;
-	height: 35px;
-	background-color: #fff;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	text-align: center;
-}
-.dollar{
-	font-size: 16px !important;
-	color: #5957f9 !important;
-	font-weight: bold !important;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-
-.current-balance{
-	font-size: 15px;
-	color: #272727;
-	font-weight: bold;
-}
-.amount{
-	color: #5957f9;
-	font-size: 16px;
-	font-weight: bold;
-}
-.dollar-sign{
-	font-size: 16px;
-	color: #272727;
-	font-weight: bold;
+.card {
+  width: 1000px;
+  background-color: #efefef;
+  border: none;
+  cursor: pointer;
+  transition: all 0.5s;
 }
 
-.recent-border{
-	border-left: 2px solid #5957f9;
-	display: flex;
-	align-items: center;
-
-}
-.recent-border:hover {
-	border-bottom: 1px solid #dee2e6!important;
+.image img {
+  transition: all 0.5s;
 }
 
-.recent-orders{
-	font-size: 16px;
-	font-weight: 700;
-	color: #5957f9;
-	margin-left: 2px;
+.card:hover .image img {
+  transform: scale(1.5);
 }
 
-.wishlist{
-	font-size: 16px;
-	font-weight: 700;
-	color: #272727;
+/* .btn {
+    height: 140px;
+    width: 140px;
+    border-radius: 50%
+} */
 
+.name {
+  font-size: 22px;
+  font-weight: bold;
 }
-.wishlist-border:hover{
-	border-bottom: 1px solid #dee2e6!important;
+
+.idd {
+  font-size: 14px;
+  font-weight: 600;
 }
-.fashion-studio{
-	font-size: 16px;
-	font-weight: 700;
-	color: #272727;
+.number {
+  font-size: 22px;
 }
-.fashion-studio-border:hover {
-	border-bottom: 1px solid #dee2e6!important;
+
+.follow {
+  font-size: 22px;
+  font-weight: bold;
+  color: #444444;
+}
+
+.btn1 {
+  height: 40px;
+  width: 150px;
+  border: none;
+  background-color: #000;
+  color: #aeaeae;
+  font-size: 15px;
+}
+
+.text span {
+  font-size: 13px;
+  color: #545454;
+  font-weight: 500;
+}
+
+.icons i {
+  font-size: 19px;
+}
+
+hr .new1 {
+  border: 1px solid;
+}
+
+.join {
+  font-size: 14px;
+  color: #a0a0a0;
+  font-weight: bold;
+}
+
+.date {
+  background-color: #ccc;
 }
