adding the loadingSpinner to the signin with a conditional rendering

--- a/client/src/pages/Signin/Signin.css
+++ b/client/src/pages/Signin/Signin.css
@@ -34,3 +34,10 @@
 .text-sm {
     font-size: 14px !important;
 }
+.App {
+  display: flex;
+  height: 100vh;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
