--- a/client/src/components/LoadingSpinner/Spinner.css
+++ b/client/src/components/LoadingSpinner/Spinner.css
@@ -1,35 +1,24 @@
-body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-  }
-
-  .loader-wrapper {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: #0b0b0b;
-    display: grid;
-    place-items: center;
-  }
-
-  .loader {
-    border: 16px solid #e3e3e3;
-    border-top: 16px solid #3498db;
-    border-radius: 50%;
-    width: 140px;
-    height: 140px;
-    animation: spin 1s linear infinite;
-  }
-
-  @keyframes spin {
+@keyframes spinner {
     0% {
       transform: rotate(0deg);
     }
-
     100% {
       transform: rotate(360deg);
     }
+  }
+  .loading-spinner {
+    width: 80px;
+    height: 80px;
+    border: 10px solid #f3f3f3; /* Light grey */
+    border-top: 10px solid #383636; /* Blue */
+    border-radius: 50%;
+    animation: spinner 1.5s linear infinite;
+  }
+  
+  .spinner-container {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    height: 350px;
+    
   }
