--- a/client/src/pages/Signin/Signin.css
+++ b/client/src/pages/Signin/Signin.css
@@ -1,38 +1,37 @@
+.container {
+  min-height: 100%;
+  min-height: 90vh;
+  display: flex;
+  align-items: center;
+}
 
-    .container{
-      min-height: 100%;   
-      min-height: 90vh;
-      display: flex;
-      align-items: center;
-    }
-  
-  .submit{
-    width: 100%;
-    background-color:#34495E; 
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-    .submit:hover {
-    background-color: #45a049;  
-  } 
-  .line {
-    height: 1px;
-    width: 45%;
-    background-color: #E0E0E0;
-    margin-top: 10px;
+.submit {
+  width: 100%;
+  background-color: #34495e;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.submit:hover {
+  background-color: #45a049;
+}
+.line {
+  height: 1px;
+  width: 45%;
+  background-color: #e0e0e0;
+  margin-top: 10px;
 }
 
 .or {
-    width: 10%;
-    font-weight: bold;
+  width: 10%;
+  font-weight: bold;
 }
 
 .text-sm {
-    font-size: 14px !important;
+  font-size: 14px !important;
 }
 .App {
   display: flex;
