--- a/client/src/pages/Signup/Signup.css
+++ b/client/src/pages/Signup/Signup.css
@@ -1,20 +1,27 @@
-.container{
-  min-height: 100%;   
+.container {
+  min-height: 100%;
   min-height: 90vh;
   display: flex;
   align-items: center;
 }
 
-  .submit {
-    width: 100%;
-    background-color:#34495E; 
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  .submit:hover {
-    background-color: #45a049; 
-  }
+.submit {
+  width: 100%;
+  background-color: #34495e;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.submit:hover {
+  background-color: #45a049;
+}
+.App {
+  display: flex;
+  height: 100vh;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
