--- a/client/src/components/LoadingSpinner/Spinner.css
+++ b/client/src/components/LoadingSpinner/Spinner.css
@@ -16,9 +16,14 @@
   }
   
   .spinner-container {
-    display: grid;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
     justify-content: center;
     align-items: center;
-    height: 350px;
-    
+    position: fixed;
+     z-index: 100;
   }
