--- a/client/src/pages/Signup/Signup.css
+++ b/client/src/pages/Signup/Signup.css
@@ -1,6 +1,6 @@
 .container {
-  min-height: 100%;
-  min-height: 90vh;
+  min-height: 90%;
+  /* min-height: 90vh; */
   display: flex;
   align-items: center;
 }
