improving the theme

--- a/client/src/components/LoadingSpinner/Spinner.css
+++ b/client/src/components/LoadingSpinner/Spinner.css
@@ -6,7 +6,7 @@
 .box1,
 .box2,
 .box3 {
-  border: 16px solid  #D1C2FF;
+  border: 16px solid #4cceac;
   box-sizing: border-box;
   position: absolute;
   display: block;
