--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,18 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap");
 
-html,
-body,
-#root,
-.app,
 .content {
-  height: 100%;
-  width: 100%;
+  margin-top: 64px;
+  margin-bottom: 64px;
   font-family: "Source Sans Pro", sans-serif;
-}
-
-.app {
-  display: flex;
-  position: relative;
 }
 
 ::-webkit-scrollbar {
