--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,12 +2,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Edu+SA+Beginner&family=Edu+VIC+WA+NT+Beginner:wght@600&family=Mochiy+Pop+One&family=Pacifico&family=Roboto:ital,wght@0,400;1,300;1,400&family=Rubik+Gemstones&family=Rubik+Moonrocks&display=swap");
 html,
 .body {
-  height: 100%;
-  padding-top: 64px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+    padding-top: 64px;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
-
+ 
 * {
   scrollbar-width: auto;
   scrollbar-color: #ccc5ce #ffffff;
