--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,11 +5,15 @@ html,
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-    padding-top: 64px;
+  position: relative;
+  padding-top: 64px;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
- 
+ .content-wrap{
+  padding-bottom:4rem;   
+ }
+
 * {
   scrollbar-width: auto;
   scrollbar-color: #ccc5ce #ffffff;
